@@ -11,7 +11,13 @@ Changelog next version
   (issue 78)
 * Added support for explicitly specifiying form parameters, e.g. using given().formParam("name", "value"). This is useful e.g. when sending a PUT request with both form params and query params (issue 75).
 * It's now possible to check that a header does NOT exist: expect().header("someheader", nullValue()). (issue 74).
-* Support for path parameters. E.g. get("/{firstName}/{lastName}", "John", "Doe") will send a GET request to "http://localhost:8080/John/Doe" (issue 36).
+* Support for path parameters. E.g. get("/{firstName}/{lastName}", "John", "Doe") will send a GET request to "http://localhost:8080/John/Doe". You can also specify path params like this:
+  given().
+          pathParam("firstName", "John").
+          pathParam("lastName", "Doe").
+  when().
+          get("/{firstName}/{lastName}");
+ (issue 36)
 
 Change log 1.2.1 (2001-05-23)
 -----------------------------
